3-kubernetes/app-deployment-k8s/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetesdeploy/
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-commander
  name: redis-commander
spec:
  ports:
    - name: "5010"
      port: 5010
      targetPort: 8081
  selector:
    io.kompose.service: redis-commander
status:
  loadBalancer: {}
