3-kubernetes/app-deployment-k8s/web-app-ingress-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-app
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: dev.academy.craftech.io
      http:
        paths:
          - path: /
            backend:
              serviceName: web-app
              servicePort: 5050
