3-kubernetes/app-deployment-k8s/counter-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: counter-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/counter-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/counter-net: "true"
